Make it java 1.8 compatible